--- a/strapi-reviews/frontend/src/index.css
+++ b/strapi-reviews/frontend/src/index.css
@@ -4,13 +4,15 @@ body {
   margin: 0 30px;
   font-family: "Poppins";
   background: #f1f1f1;
+  font-weight: 200;
+  font-size: 14px;
 }
 
 h1,
 h2,
 h3,
 h4 {
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .App {
@@ -35,6 +37,14 @@ a {
   border-bottom: 2px solid;
 }
 
+.site-header .categories {
+  text-align: right;
+}
+
+.site-header .categories a {
+  margin-left: 10px;
+}
+
 /* review list */
 .review-card {
   background: white;
@@ -49,8 +59,8 @@ a {
   left: -20px;
   background: #8e2ad6;
   font-size: 3em;
-  width: 90px;
-  height: 90px;
+  width: 75px;
+  height: 75px;
   text-align: center;
   color: white;
 }
