Project ended with errors due Gatsby latest update

--- a/gatsby-starter/src/styles/global.css
+++ b/gatsby-starter/src/styles/global.css
@@ -7,17 +7,13 @@
   font-family: "Montserrat";
   color: white;
 }
-
-html,
-body {
+html, body {
   min-height: 100%;
 }
-
 body {
-  background: radial-gradient(at top left, rgba(146, 43, 225, 1) 0%, rgba(43, 9, 107, 1) 100%);
+  background: radial-gradient(at top left, rgba(146,43,225,1) 0%, rgba(43,9,107,1) 100%);
   background-repeat: no-repeat;
 }
-
 p {
   margin: 16px auto;
   line-height: 1.5em;
@@ -28,18 +24,15 @@ p {
   max-width: 1200px;
   margin: 0 auto;
 }
-
 nav {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin: 40px auto;
 }
-
 nav .links {
   display: inline-block;
   text-align: right;
 }
-
 nav a {
   display: inline-block;
   margin-left: 20px;
@@ -47,12 +40,10 @@ nav a {
   padding-bottom: 8px;
   border-bottom: 3px solid transparent;
 }
-
 nav a:hover {
   border-color: white;
 }
-
-footer p {
+footer p{
   text-align: center;
   color: #bbb;
   margin: 40px auto;
